# frappecli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_STATUS.md  LICENSE  MIGRATION.md  README.md  STATUS.md  config.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  notify-tap.yml  release.yml
docs/: COMPLETION.md  authentication.md  linting-framework.md  quick-reference.md  setup-summary.md
docs/plans/: implementation-plan.md
src/frappecli/: __init__.py  cli.py  client.py  config.py  helpers.py
src/frappecli/commands/: __init__.py  doctypes.py  files.py  reports.py  site.py
tests/: test_cli.py  test_client.py  test_config.py  test_helpers.py
tests/fixtures/: api_responses.json  test_config.yaml
