[project]
name = "frappecli"
version = "0.1.0"
description = "A Python CLI tool for managing Frappe instances via REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "pasogott - Pascal Schott", email = "gitlab@ott.team" }
]
keywords = ["frappe", "cli", "rest-api", "erp", "business-apps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "responses>=0.25.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.5",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
]

[project.urls]
Homepage = "https://github.com/pasogott/frappecli"
Documentation = "https://github.com/pasogott/frappecli#readme"
Repository = "https://github.com/pasogott/frappecli"
Issues = "https://github.com/pasogott/frappecli/issues"

[project.scripts]
frappecli = "frappecli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "YTT",   # flake8-2020
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "T20",   # flake8-print
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (ok in tests)
    "T201",    # print statements (ok in CLI)
    "PLR0913", # too many arguments
    "COM812",  # trailing comma (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "S105",    # hardcoded passwords ok in tests
    "S106",    # hardcoded passwords ok in tests
    "ARG",     # unused arguments ok in tests (fixtures)
    "PLR2004", # magic values ok in tests
    "A004",    # shadowing builtins ok in tests
]
"src/frappecli/cli.py" = [
    "T201",    # print allowed in CLI
]
"src/frappecli/commands/site.py" = [
    "A005",    # module name 'site' is intentional
]

[tool.ruff.lint.isort]
known-first-party = ["frappecli"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "responses.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src/frappecli --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # assert_used - ok in tests

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
